(lang dune 3.0)

(name dedup)

(generate_opam_files true)

(source
 (github haneiko/dedup))

(authors "Mateus Haneiko")

(maintainers "Mateus Haneiko")

(license LICENCE)

; (documentation https://url/to/documentation)

; (package
;  (name dedup)
;  (synopsis "A short synopsis")
;  (description "A longer description")
;  (depends ocaml dune)
;  (tags
;   (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
